--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t FernanSP/docker_react -f Dockerfile.dev .
+  - docker build -t FernanSP/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true FernanSP/docker_react npm run test
+  - docker run -e CI=true FernanSP/docker-react npm run test
